--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions:faqFor",
     "logs": "firebase functions:log",
     "emulators": "firebase emulators:start --only firestore"
   },
